Sort for mobile

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -92,6 +92,13 @@
 		</div>
 	</footer>
 
+	<script>
+		//Javascript to toggle the menu
+		document.getElementById('nav-toggle').onclick = function() {
+			document.getElementById("nav-content").classList.toggle("hidden");
+		}
+	</script>
+
 </body>
 
 </html>
