--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -591,6 +591,9 @@ video {
 .table {
   display: table;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
@@ -615,12 +618,6 @@ video {
 .flex-grow {
   flex-grow: 1;
 }
-.basis-2\/3 {
-  flex-basis: 66.666667%;
-}
-.basis-1\/3 {
-  flex-basis: 33.333333%;
-}
 .table-auto {
   table-layout: auto;
 }
@@ -628,9 +625,6 @@ video {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-}
-.flex-row {
-  flex-direction: row;
 }
 .flex-wrap {
   flex-wrap: wrap;
@@ -1028,12 +1022,24 @@ video {
 }
 		@media (min-width: 768px) {
 
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
 
   .md\:max-w-4xl {
     max-width: 56rem;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:bg-transparent {
