--- a/src/views/ethel.handlebars
+++ b/src/views/ethel.handlebars
@@ -1,7 +1,7 @@
 <!--Container-->
 <div class="container w-full md:max-w-4xl mx-auto pt-10">
-<div class="flex flex-row gap-4">
-  <div class="basis-2/3">
+<div class="grid md:grid-cols-3 gap-4">
+  <div class="md:col-span-2">
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
       <div class="px-4 py-5 sm:px-6">
         <h1 class="font-bold font-sans break-normal text-gray-900 text-3xl md:text-4xl">{{ ethel.name }}</h1>
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="basis-1/3">
+  <div class="md:col-span-1">
    <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-5">
       <div class="px-4 py-5 sm:px-6">
         <h3 class="font-bold font-sans break-normal text-gray-900">Map Data</h3>
