--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -15,7 +15,11 @@
 
         <!--Lead Para-->
         <p class="py-6">
-            Welcome, this website was made to display information about the 95 Ethel hills in the Peak District of England. Hopefully it will provide you with all the information you need to enjoy walking/exploring them. I've tried to include routes, information, and images of the hills. <a class="underline" target="_blank" href="https://en.wikipedia.org/wiki/List_of_Ethels">Wikipedia has more information on Ethels.</a>
+            Welcome, this website was made to display information about the 95 Ethel hills in the Peak District of England. Hopefully it will provide you with all the information you need to enjoy walking/exploring them. I've tried to include routes, information, and images of the hills.
+        </p>
+
+        <p class="pb-6">
+            "The Ethels are 95 hills in the Peak District of England, mostly over 400m above sea level but including various prominent lower hills. The Ethels are a tribute to <a class="underline" target="_blank" href="https://en.wikipedia.org/wiki/Ethel_Haythornthwaite">Ethel Haythornthwaite</a> who pioneered the establishment of the Peak District as Britain's first national park in 1951." - <a class="underline" target="_blank" href="https://en.wikipedia.org/wiki/List_of_Ethels">Wikipedia</a>
         </p>
 
 
