--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -19,7 +19,7 @@
         </p>
 
         <p class="pb-6">
-            "The Ethels are 95 hills in the Peak District of England, mostly over 400m above sea level but including various prominent lower hills. The Ethels are a tribute to <a class="underline" target="_blank" href="https://en.wikipedia.org/wiki/Ethel_Haythornthwaite">Ethel Haythornthwaite</a> who pioneered the establishment of the Peak District as Britain's first national park in 1951." - <a class="underline" target="_blank" href="https://en.wikipedia.org/wiki/List_of_Ethels">Wikipedia</a>
+            "The Ethels are 95 hills in the Peak District of England, mostly over 400m above sea level but including various prominent lower hills. The Ethels are a tribute to <a class="underline font-bold" target="_blank" href="https://en.wikipedia.org/wiki/Ethel_Haythornthwaite">Ethel Haythornthwaite</a> who pioneered the establishment of the Peak District as Britain's first national park in 1951." - <a class="underline font-bold" target="_blank" href="https://en.wikipedia.org/wiki/List_of_Ethels">Wikipedia</a>
         </p>
 
 
@@ -42,7 +42,7 @@
                 <tbody>
                     {{#each ethels}}
                     <tr>
-                        <td><a class="underline" href="/ethel/{{ slug }}">{{ name }}</a></td>
+                        <td><a class="underline font-bold" href="/ethel/{{ slug }}">{{ name }}</a></td>
                         <td>{{ height }}</td>
                         <td>{{ lat }}, {{ lon }}</td>
                         <td>{{ county }}</td>
