--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -819,9 +819,6 @@ video {
 .font-normal {
   font-weight: 400;
 }
-.font-extrabold {
-  font-weight: 800;
-}
 .leading-normal {
   line-height: 1.5;
 }
@@ -864,98 +861,103 @@ video {
 
 
 /*Overrides for Tailwind CSS */
+.map {
+	height: 400px;
+	width: 100%;
+	background-color: #4a5568;
+}
 
-		/*Form fields*/
-		.dataTables_wrapper select,
-		.dataTables_wrapper .dataTables_filter input {
-			color: #4a5568;
-			/*text-gray-700*/
-			padding-left: 1rem;
-			/*pl-4*/
-			padding-right: 1rem;
-			/*pl-4*/
-			padding-top: .5rem;
-			/*pl-2*/
-			padding-bottom: .5rem;
-			/*pl-2*/
-			line-height: 1.25;
-			/*leading-tight*/
-			border-width: 2px;
-			/*border-2*/
-			border-radius: .25rem;
-			border-color: #edf2f7;
-			/*border-gray-200*/
-			background-color: #edf2f7;
-			/*bg-gray-200*/
-		}
+/*Form fields*/
+.dataTables_wrapper select,
+.dataTables_wrapper .dataTables_filter input {
+	color: #4a5568;
+	/*text-gray-700*/
+	padding-left: 1rem;
+	/*pl-4*/
+	padding-right: 1rem;
+	/*pl-4*/
+	padding-top: .5rem;
+	/*pl-2*/
+	padding-bottom: .5rem;
+	/*pl-2*/
+	line-height: 1.25;
+	/*leading-tight*/
+	border-width: 2px;
+	/*border-2*/
+	border-radius: .25rem;
+	border-color: #edf2f7;
+	/*border-gray-200*/
+	background-color: #edf2f7;
+	/*bg-gray-200*/
+}
 
-		/*Row Hover*/
-		table.dataTable.hover tbody tr:hover,
-		table.dataTable.display tbody tr:hover {
-			background-color: #ebf4ff;
-			/*bg-indigo-100*/
-		}
+/*Row Hover*/
+table.dataTable.hover tbody tr:hover,
+table.dataTable.display tbody tr:hover {
+	background-color: #ebf4ff;
+	/*bg-indigo-100*/
+}
 
-		/*Add padding to bottom border */
-		table.dataTable.no-footer {
-			border-bottom: 1px solid #e2e8f0;
-			/*border-b-1 border-gray-300*/
-			margin-top: 0.75em;
-			margin-bottom: 0.75em;
-		}
+/*Add padding to bottom border */
+table.dataTable.no-footer {
+	border-bottom: 1px solid #e2e8f0;
+	/*border-b-1 border-gray-300*/
+	margin-top: 0.75em;
+	margin-bottom: 0.75em;
+}
 
-		/*Change colour of responsive icon*/
-		table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before,
-		table.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
-			background-color: #667eea !important;
-			/*bg-indigo-500*/
-		}
-		.hover\:border-green-500:hover {
+/*Change colour of responsive icon*/
+table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before,
+table.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
+	background-color: #667eea !important;
+	/*bg-indigo-500*/
+}
+.hover\:border-green-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
-		.hover\:bg-green-800:hover {
+.hover\:bg-green-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
-		.hover\:bg-yellow-500:hover {
+.hover\:bg-yellow-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
-		.hover\:bg-red-800:hover {
+.hover\:bg-red-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
-		.hover\:text-gray-900:hover {
+.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-		.hover\:no-underline:hover {
+.hover\:no-underline:hover {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
 }
-		.focus\:outline-none:focus {
+.focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-		.focus\:ring-4:focus {
+.focus\:ring-4:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-		.focus\:ring-green-300:focus {
+.focus\:ring-green-300:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(134 239 172 / var(--tw-ring-opacity));
 }
-		.focus\:ring-yellow-300:focus {
+.focus\:ring-yellow-300:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(253 224 71 / var(--tw-ring-opacity));
 }
-		.focus\:ring-red-300:focus {
+.focus\:ring-red-300:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(252 165 165 / var(--tw-ring-opacity));
 }
-		@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
 
   .dark\:bg-green-600 {
     --tw-bg-opacity: 1;
@@ -992,7 +994,7 @@ video {
     --tw-ring-color: rgb(127 29 29 / var(--tw-ring-opacity));
   }
 }
-		@media (min-width: 640px) {
+@media (min-width: 640px) {
 
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
@@ -1023,7 +1025,7 @@ video {
     padding-right: 1.5rem;
   }
 }
-		@media (min-width: 768px) {
+@media (min-width: 768px) {
 
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
@@ -1069,7 +1071,7 @@ video {
     line-height: 1.5rem;
   }
 }
-		@media (min-width: 1024px) {
+@media (min-width: 1024px) {
 
   .lg\:mt-0 {
     margin-top: 0px;
