--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -5,7 +5,7 @@
 
         <!--Title-->
         <div class="font-sans">
-            <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Welcome to the Ethel website.</h1>
+            <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Welcome to the Ethels website.</h1>
             <p class="text-sm md:text-base font-normal text-gray-600">Last updated 27th June 2022</p>
         </div>
 
@@ -19,7 +19,7 @@
         </p>
 
         <p class="pb-6">
-            "The Ethels are 95 hills in the Peak District of England, mostly over 400m above sea level but including various prominent lower hills. The Ethels are a tribute to <a class="underline font-bold" target="_blank" href="https://en.wikipedia.org/wiki/Ethel_Haythornthwaite">Ethel Haythornthwaite</a> who pioneered the establishment of the Peak District as Britain's first national park in 1951." - <a class="underline font-bold" target="_blank" href="https://en.wikipedia.org/wiki/List_of_Ethels">Wikipedia</a>
+            "The Ethels are 95 hills in the Peak District of England, mostly over 400m above sea level but including various prominent lower hills. The Ethels are a tribute to <a target="_blank" href="https://en.wikipedia.org/wiki/Ethel_Haythornthwaite">Ethel Haythornthwaite</a> who pioneered the establishment of the Peak District as Britain's first national park in 1951." - <a target="_blank" href="https://en.wikipedia.org/wiki/List_of_Ethels">Wikipedia</a>
         </p>
 
 
