--- a/src/public/styles/tailwind.css
+++ b/src/public/styles/tailwind.css
@@ -10,6 +10,11 @@
 	background-color: #4a5568;
 }
 
+a {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
 /*Form fields*/
 .dataTables_wrapper select,
 .dataTables_wrapper .dataTables_filter input {
