--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -58,7 +58,36 @@
 
     </div>
     <!--Divider-->
-    <hr class="mt-8 mx-4">
+    <hr class="border-b-2 border-gray-400 mt-8 mb-8">
+
+    <div class="container mx-auto">
+    <div class="grid-cols-3 space-y-2 lg:space-y-0 lg:grid lg:gap-3 lg:grid-rows-3">
+        <div class="w-full rounded">
+            <a href="/ethel/{{ ethels.0.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.0.image }}"
+                alt="image"></a>
+        </div>
+        <div class="w-full col-span-2 row-span-2 rounded">
+            <a href="/ethel/{{ ethels.1.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.1.image }}"
+                alt="image"></a>
+        </div>
+        <div class="w-full rounded">
+            <a href="/ethel/{{ ethels.2.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.2.image }}"
+                alt="image"></a>
+        </div>
+        <div class="w-full rounded">
+            <a href="/ethel/{{ ethels.3.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.3.image }}"
+                alt="image"></a>
+        </div>
+        <div class="w-full rounded">
+            <a href="/ethel/{{ ethels.4.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.4.image }}"
+                alt="image"></a>
+        </div>
+        <div class="w-full rounded">
+           <a href="/ethel/{{ ethels.5.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.5.image }}"
+                alt="image"></a>
+        </div>
+    </div>
+</div>
 
 </div>
 <!--/container-->
