--- a/src/views/ethel.handlebars
+++ b/src/views/ethel.handlebars
@@ -2,6 +2,9 @@
 <div>
   <img src="/images/ethels/{{ethel.image}}" alt="{{ethel.name}}" class="object-cover w-full h-96">
 </div>
+<div class="bg-white shadow px-2 py-4 text-right">
+  <div class="container w-full md:max-w-4xl mx-auto text-sm text-gray-500">{{{ ethel.image_attribute }}}</div>
+</div>
 {{/if}}
 <!--Container-->
 <div class="container w-full md:max-w-4xl mx-auto pt-10">
@@ -77,12 +80,8 @@
 <div id="map" class="map"></div>
 
 <div id="popup" class="ol-popup">
-     <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-     <div id="popup-content"></div>
- </div>
-
-<div class="bg-white shadow px-2 py-4 text-right">
-  <div class="container w-full md:max-w-4xl mx-auto ">{{{ ethel.image_attribute }}}</div>
+    <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+    <div id="popup-content"></div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.14.1/build/ol.js"></script>
