--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -541,6 +541,9 @@ video {
     max-width: 1536px;
   }
 }
+.invisible {
+  visibility: hidden;
+}
 .top-0 {
   top: 0px;
 }
@@ -612,6 +615,12 @@ video {
 .h-full {
   height: 100%;
 }
+.h-screen {
+  height: 100vh;
+}
+.h-8 {
+  height: 2rem;
+}
 .h-10 {
   height: 2.5rem;
 }
@@ -620,6 +629,9 @@ video {
 }
 .w-full {
   width: 100%;
+}
+.w-8 {
+  width: 2rem;
 }
 .w-10 {
   width: 2.5rem;
@@ -745,6 +757,10 @@ video {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
 .p-0 {
   padding: 0px;
 }
@@ -780,6 +796,10 @@ video {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -799,10 +819,6 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
@@ -917,7 +933,10 @@ video {
 .map {
 	height: 400px;
 	width: 100%;
-	background-color: #4a5568;
+}
+.map-big {
+	min-height: 100%;
+	width: 100%;
 }
 
 a {
