--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://ethels.uk/ethel/{{ethel.slug}}" />
 	<meta property="og:image" content="https://ethels.uk/images/ethels/{{ethel.image}}" />
+	<meta property="og:description" content="More about the {{ethel.height}} metre {{ethel.name}} Ethel. The Ethels are 95 hills in the Peak District of England.">
 	{{/if}}
   </head>
 
