--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/styles/style.css"/>
 
 	{{#if ethel}}
-	<meta property="og:title" content="{{ethel.name}} Ethel (Hill Walk)" />
+	<meta property="og:title" content="{{ethel.name}} Ethel (Peak District Hill Walk)" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://ethels.uk/ethel/{{ethel.slug}}" />
 	<meta property="og:image" content="https://ethels.uk/images/ethels/{{ethel.image}}" />
