twitter summary_large_image

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 	<meta property="og:url" content="https://ethels.uk/ethel/{{ethel.slug}}" />
 	<meta property="og:image" content="https://ethels.uk/images/ethels/{{ethel.image}}" />
 	<meta property="og:description" content="More about the {{ethel.height}} metre {{ethel.name}} Ethel. The Ethels are 95 hills in the Peak District of England.">
-	<meta name="twitter:card" content="summary" /> 
+	<meta name="twitter:card" content="summary_large_image" /> 
 	<meta name="twitter:site" content="https://ethels.uk/ethel/{{ethel.slug}}" /> 
 	<meta name="twitter:title" content="{{ethel.name}} Ethel (Peak District Hill Walk)" /> 
 	<meta name="twitter:description" content="More about the {{ethel.height}} metre {{ethel.name}} Ethel. The Ethels are 95 hills in the Peak District of England." /> 
