--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ethels : {{#if title}}{{ title }} Ethel - Walk and Routes{{else}}95 Hills in the Peak District{{/if}}</title>
+    <title>Ethels : {{#if title}}{{ title }}{{else}}95 Hills in the Peak District{{/if}}</title>
     <meta name="author" content="Daniel J. Pomfret" />
     <meta name="description" content="The Ethels are 95 hills in the Peak District of England" />
     <meta name="keywords" content="ethels,hills,walking" />
