--- a/src/views/ethel.handlebars
+++ b/src/views/ethel.handlebars
@@ -1,6 +1,6 @@
 {{#if ethel.image}}
 <div>
-  <img src="/images/ethels/{{ethel.image}}" alt="{{ethel.name}}" class="object-cover w-full h-96">
+  <img src="/images/ethels/headers/{{ethel.image}}" alt="{{ethel.name}}" class="object-cover w-full h-96">
 </div>
 <div class="bg-white shadow px-2 py-4 text-right">
   <div class="container w-full md:max-w-4xl mx-auto text-sm text-gray-500">{{{ ethel.image_attribute }}}</div>
