--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -62,27 +62,27 @@
         <div class="container mx-auto">
         <div class="grid-cols-3 space-y-2 lg:space-y-0 lg:grid lg:gap-3 lg:grid-rows-3">
             <div class="w-full rounded">
-                <a href="/ethel/{{ ethels.0.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.0.image }}"
+                <a href="/ethel/{{ ethels.0.slug}}"><img class="object-cover h-full" src="/images/ethels/thumbnails/{{ ethels.0.image }}"
                     alt="image"></a>
             </div>
             <div class="w-full col-span-2 row-span-2 rounded">
-                <a href="/ethel/{{ ethels.1.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.1.image }}"
+                <a href="/ethel/{{ ethels.1.slug}}"><img class="object-cover h-full" src="/images/ethels/thumbnails/{{ ethels.1.image }}"
                     alt="image"></a>
             </div>
             <div class="w-full rounded">
-                <a href="/ethel/{{ ethels.2.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.2.image }}"
+                <a href="/ethel/{{ ethels.2.slug}}"><img class="object-cover h-full" src="/images/ethels/thumbnails/{{ ethels.2.image }}"
                     alt="image"></a>
             </div>
             <div class="w-full rounded">
-                <a href="/ethel/{{ ethels.3.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.3.image }}"
+                <a href="/ethel/{{ ethels.3.slug}}"><img class="object-cover h-full" src="/images/ethels/thumbnails/{{ ethels.3.image }}"
                     alt="image"></a>
             </div>
             <div class="w-full rounded">
-                <a href="/ethel/{{ ethels.4.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.4.image }}"
+                <a href="/ethel/{{ ethels.4.slug}}"><img class="object-cover h-full" src="/images/ethels/thumbnails/{{ ethels.4.image }}"
                     alt="image"></a>
             </div>
             <div class="w-full rounded">
-            <a href="/ethel/{{ ethels.5.slug}}"><img class="object-cover h-full" src="/images/ethels/{{ ethels.5.image }}"
+            <a href="/ethel/{{ ethels.5.slug}}"><img class="object-cover h-full" src="/images/ethels/thumbnails/{{ ethels.5.image }}"
                     alt="image"></a>
             </div>
         </div>
