--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -579,6 +579,9 @@ video {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.mr-2 {
+  margin-right: 0.5rem;
+}
 .mt-0 {
   margin-top: 0px;
 }
@@ -615,11 +618,11 @@ video {
 .h-full {
   height: 100%;
 }
-.h-screen {
-  height: 100vh;
-}
 .h-8 {
   height: 2rem;
+}
+.h-screen {
+  height: 100vh;
 }
 .h-10 {
   height: 2.5rem;
