--- a/src/views/list.handlebars
+++ b/src/views/list.handlebars
@@ -10,16 +10,14 @@
                     <tr>
                         <th data-priority="2">Name</th>
                         <th data-priority="1">Height</th>
-                        <th data-priority="1">Lat/Lon</th>
                         <th data-priority="5">County</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each ethels}}
                     <tr>
-                        <td><a class="underline" href="/ethel/{{ slug }}">{{ name }}</a></td>
+                        <td><a class="underline flex" href="/ethel/{{ slug }}">{{#if image}}<img class="w-8 h-8 mr-2" src="images/ethels/map/{{image}}">{{/if}}<p>{{ name }}</p></a></td>
                         <td>{{ height }}</td>
-                        <td>{{ lat }}, {{ lon }}</td>
                         <td>{{ county }}</td>
                     </tr>
                     {{/each}}
