Add images to list and fix padding on logo

--- a/src/views/list.handlebars
+++ b/src/views/list.handlebars
@@ -15,7 +15,7 @@
                 <tbody>
                     {{#each ethels}}
                     <tr>
-                        <td><a class="underline flex" href="/ethel/{{ slug }}">{{#if image}}<img class="w-8 h-8 mr-2" src="images/ethels/map/{{image}}">{{/if}}<p>{{ name }}</p></a></td>
+                        <td><a class="underline flex" href="/ethel/{{ slug }}"><img class="w-8 h-8 mr-2 rounded" src="images/ethels/map/{{image}}"><p>{{ name }}</p></a></td>
                         <td>{{ height }}</td>
                     </tr>
                     {{/each}}
