--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -615,11 +615,11 @@ video {
 .h-96 {
   height: 24rem;
 }
-.h-full {
-  height: 100%;
-}
 .h-8 {
   height: 2rem;
+}
+.h-full {
+  height: 100%;
 }
 .h-screen {
   height: 100vh;
@@ -837,6 +837,9 @@ video {
 }
 .pl-4 {
   padding-left: 1rem;
+}
+.pt-1\.5 {
+  padding-top: 0.375rem;
 }
 .pt-1 {
   padding-top: 0.25rem;
@@ -1099,11 +1102,6 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>th:first-child:before {
 
   .sm\:rounded-lg {
     border-radius: 0.5rem;
-  }
-
-  .sm\:bg-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
   .sm\:px-6 {
