--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -42,7 +42,7 @@
                 <tbody>
                     {{#each ethels}}
                     <tr>
-                        <td><a class="underline font-bold" href="/ethel/{{ slug }}">{{ name }}</a></td>
+                        <td><a class="flex underline font-bold" href="/ethel/{{ slug }}"><img class="w-8 h-8 mr-2 rounded" src="images/ethels/map/{{image}}"> <p>{{ name }}</p></a></td>
                         <td>{{ height }}</td>
                         <td>{{ lat }}, {{ lon }}</td>
                         <td>{{ county }}</td>
