--- a/src/views/ethel.handlebars
+++ b/src/views/ethel.handlebars
@@ -9,11 +9,13 @@
 <!--Container-->
 <div class="container w-full md:max-w-4xl mx-auto pt-10">
 <div class="grid md:grid-cols-3 gap-4">
+  <div class="md:col-span-1">
+      <img src="/images/ethels/thumbnails/{{ ethel.image }}" alt="{{ ethel.name }}" class="w-full rounded md:mt-3 shadow hidden md:block">
+    </div>
   <div class="md:col-span-2">
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
       <div class="px-4 py-5 sm:px-6">
-        <h1 class="font-bold font-sans break-normal text-gray-900 text-3xl md:text-4xl">{{ ethel.name }}</h1>
-        <p class="mt-1 max-w-2xl text-sm text-gray-500">{{ ethel.slug }}</p>
+        <h1 class="font-bold font-sans break-normal text-gray-900 text-2xl md:text-3xl">{{ ethel.name }}</h1>
       </div>
       <div class="border-t border-gray-200">
         <dl>
@@ -33,14 +35,14 @@
       </div>
     </div>
   </div>
-  <div class="md:col-span-1">
+  <div class="md:col-span-2">
    <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-5">
       <div class="px-4 py-5 sm:px-6">
         <h3 class="font-bold font-sans break-normal text-gray-900">Map Data</h3>
       </div>
       <div class="border-t border-gray-200">
         <dl>
-          <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+         <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
             <dt class="text-sm font-medium text-gray-500">Grid Ref</dt>
             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">{{ ethel.gridreference }}</dd>
           </div>
@@ -48,13 +50,15 @@
             <dt class="text-sm font-medium text-gray-500">Lat/Lon</dt>
             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">{{ ethel.lat }}, {{ ethel.lon }}</dd>
           </div>
-          <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+          <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
             <dt class="text-sm font-medium text-gray-500">Maps</dt>
             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2 underline"><a href="https://www.google.co.uk/maps/@{{ ethel.lat }},{{ ethel.lon }},14z" target="_blank">Google Maps</a><br> <a href="https://explore.osmaps.com/?lat={{ ethel.lat }}&lon={{ ethel.lon }}&zoom=14.0000&overlays=&style=Standard&type=2d" target="_blank">OS Maps</a></dd>
           </div>
         </dl>
       </div>
     </div>
+  </div>
+  <div class="md:col-span-1">
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
       <div class="px-4 py-5 sm:px-6">
         <h3 class="font-bold font-sans break-normal text-gray-900">Routes</h3>
